# vibecoding-game

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  game_content.hpp  game_types.hpp  main.cpp  meta_content.hpp
tools/: generate_assets.py
